@@ -181,6 +181,7 @@ tweak import-priority-category
 # Misc. UI tweaks
 tweak civ-view-agreement
 tweak fps-min
+tweak kitchen-prefs-empty
 tweak max-wheelbarrow
 tweak shift-8-scroll
 tweak tradereq-pet-gender
